rename X-Is-Admin to X-User-Is-Admin
